[gd_scene load_steps=23 format=2]

[ext_resource path="res://Final/Grass_background_2.png" type="Texture" id=1]
[ext_resource path="res://Final/Grass_background_1.png" type="Texture" id=2]
[ext_resource path="res://Final/Tiles.png" type="Texture" id=3]
[ext_resource path="res://Final/Background_0.png" type="Texture" id=4]
[ext_resource path="res://Final/Salt.png" type="Texture" id=5]
[ext_resource path="res://player.gd" type="Script" id=6]
[ext_resource path="res://viking/viking2.png" type="Texture" id=7]
[ext_resource path="res://mini_jogo.gd" type="Script" id=8]
[ext_resource path="res://Final/Background_1.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0
height = 0.0

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 0, 1, 2, 3, 4, 8 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 32, 64, 32, 64, 96, 0, 96 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 32, 32, 64, 32, 96, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 32, 96, 32, 96, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 32, 64, 32, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 32, 96, 32, 96, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 96, 32, 64, 32, 64, 32, 96, 32 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 128, 0, 128, 224, 0, 224 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 32, 96, 32, 96, 96, 0, 96 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 32, 128, 32, 128, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
4/name = "Tiles.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 0, 96, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 6 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Tiles.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 160, 64, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 7 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Tiles.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 224, 64, 96, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 8 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Salt.png 7"
7/texture = ExtResource( 5 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 128, 224 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 9 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Tiles.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 32, 0, 96, 96 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 12 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "Tiles.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 64, 224, 128, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 13 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "Tiles.png 10"
10/texture = ExtResource( 3 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 224, 64, 96 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 10 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "Tiles.png 11"
11/texture = ExtResource( 3 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 64, 288, 96, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 14 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 514, 301 )
scale = Vector2( 1.33333, 1.44231 )
texture = ExtResource( 4 )

[node name="GrassBackground1" type="Sprite" parent="fundo"]
position = Vector2( -262.5, 68.64 )
scale = Vector2( 0.691051, 0.66 )
texture = ExtResource( 2 )

[node name="GrassBackground1" type="Sprite" parent="fundo/GrassBackground1"]
position = Vector2( 350.545, 2.10098 )
texture = ExtResource( 2 )

[node name="GrassBackground2" type="Sprite" parent="fundo/GrassBackground1"]
position = Vector2( 728.727, -8.40402 )
scale = Vector2( 1.16529, 1.05051 )
texture = ExtResource( 1 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( -90, -81 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="player"]
position = Vector2( 125, 594 )
scale = Vector2( 1.79688, 1.98028 )
texture = ExtResource( 7 )
hframes = 9
vframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 128, 610 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
root_node = NodePath("../..")
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 4, 276 )
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 11, 10, 0, 65542, 1610612747, 0, 65547, 10, 0, 65550, 7, 0, 131075, 8, 0, 131081, 1610612747, 0, 131083, 10, 0, 196610, 536870920, 0, 196611, 536870920, 0, 196614, 536870921, 0, 196615, 536870921, 0, 196616, 536870921, 0, 196617, 536870921, 0, 196619, 10, 0, 262144, 536870916, 0, 262145, 4, 0, 262146, 536870916, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 536870918, 0, 262151, 6, 0, 262152, 536870918, 0, 262153, 6, 0, 262154, 5, 0, 262155, 536870917, 0, 262156, 5, 0, 262157, 536870917, 0, 262158, 5, 0, 262159, 536870917, 0 )

[node name="mensagem_final" type="Label" parent="."]
margin_left = 101.0
margin_top = 261.0
margin_right = 512.0
margin_bottom = 292.0
rect_scale = Vector2( 2, 2 )
text = "SUA ALMA FOI ENTREGUE!
AGORA NÃO HÁ OUTRA SAÍDA, SUA ALMA PERTENCE À ESTÁTUA"

[node name="Button" type="Button" parent="."]
margin_left = 929.0
margin_top = 537.0
margin_right = 1010.0
margin_bottom = 557.0
rect_scale = Vector2( 0.7, 0.7 )
text = "ADORE-ME"

[node name="fundo_inicial" type="Sprite" parent="."]
position = Vector2( 513, 305 )
scale = Vector2( 1.33073, 1.44712 )
texture = ExtResource( 4 )

[node name="Background1" type="Sprite" parent="fundo_inicial"]
position = Vector2( -0.751465, 0.69104 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="fundo_inicial"]
margin_left = -112.72
margin_top = -130.605
margin_right = -51.7202
margin_bottom = -116.605
rect_scale = Vector2( 4, 4 )
text = "O RITUAL"

[node name="iniciar" type="Button" parent="."]
margin_left = 396.0
margin_top = 441.0
margin_right = 661.0
margin_bottom = 535.0
text = "INICIAR"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="iniciar" to="." method="_on_iniciar_pressed"]
